finished add punchline functionality

--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
         </div>
 
         <!-- Masthead Avatar Image -->
-        <img id="laughing-head" onclick="loadRandomJoke();" class="masthead-avatar mb-5" src="img/avataaars.svg" alt="" title="Click to load next joke">
+        <img id="laughing-head" style="display: none;" onclick="loadRandomJoke();" class="masthead-avatar mb-5" src="img/avataaars.svg" alt="" title="Click to load next joke">
         <h1 id="new-button" style="display: none;" class="masthead-heading mb-3"><span onclick='loadRandomJoke();'  title="Click to load next joke" class='clickable badge badge-secondary'>Load another joke</span></h1>
       </div>
     </header>
